# paired-binary

./: Cargo.toml  README.md  index.html
pkg/: package.json  paired_binary.d.ts  paired_binary.js  paired_binary_bg.wasm  paired_binary_bg.wasm.d.ts
src/: entity.rs  error.rs  lib.rs  pattern.rs  propagator.rs  wasm_api.rs
