[package]
name = "paired_binary"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2"
thiserror = "1.0"
rand = "0.8"
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] } # <<< ADD THIS LINE

[lib]
crate-type = ["cdylib", "rlib"]